components/dynamodb/execution/templates/admin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: dynamodb-ingress
spec:
  rules:
  - host: HOSTNAME
    http:
      paths:
      - backend:
          service:
            name: dynamodb-local-admin
            port:
              name: http
        path: /
        pathType: Prefix
